# WireHarness-MultiGripper-RL

./: LICENSE  P5.stl  P6.stl  README.md  check_repo.py  gitignore  pyproject.toml
assets/: Antkessy1_Finger_1.stl  Antkessy1_Finger_2.stl  Bedkom_Finger_1.stl  Bedkom_Finger_2.stl  Gripping Assembly.stl  Lade1_A_Finger_1.stl  Lade1_A_Finger_2.stl  Lade1_B_Finger_1.stl  Lade1_B_Finger_2.stl  Lsregler_Finger_1.stl  Lsregler_Finger_2.stl  Multi Gripper 4.xml  S0_harness.npy  Schaltbet_A_Finger_1.stl  Schaltbet_A_Finger_2.stl  Schaltbet_B_Finger_1.stl  Schaltbet_B_Finger_2.stl  Taststart_Finger_1.stl  Taststart_Finger_2.stl
examples/: train_common.py  train_sac.py  train_td3.py  watch.py
harness_rl/: __init__.py  config.py  env.py
